# deepagents-cookbook

./: .env.example  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
cookbook/: README.md  __init__.py
cookbook/00_model_setup/: README.md  basic_chat.py  streaming_chat.py
cookbook/01_model/: README.md  minimal_agent.py  model_connection.py
cookbook/02_tools_mcp/: README.md  order_status_agent.py
cookbook/03_loop_workflow/: README.md  todo_loop.py
cookbook/04_memory/: README.md  memory_agent.py
cookbook/05_skills/: README.md  skill_agent.py
cookbook/06_sandbox/: README.md  sandbox_agent.py
cookbook/08_production/: README.md
docs/: README.md  example-template.md  recipe-template.md
examples/: README.md  __init__.py
examples/01_model/: README.md  model_connection.py
examples/02_tools_mcp/: README.md  tool_mcp_integration.py
examples/03_turns/: README.md  conversation_turns.py
examples/04_memory/: README.md  memory_agent.py
examples/05_skills/: README.md  skill_agent.py
examples/06_sandbox/: README.md  sandbox_agent.py
examples/06_sandbox/skills/example-indexer/: SKILL.md  pyproject.toml
examples/06_sandbox/skills/example-indexer/scripts/: __init__.py  build_example_index.py  check.py
examples/06_sandbox/skills/example-indexer/tests/: __init__.py  test_build_example_index.py
examples/07_persistence/: README.md  postgres_checkpoint.py
examples/08_observability/: README.md
examples/09_service_integration/: README.md
examples/10_hooks/: README.md
examples/11_advanced_memory/: README.md
examples/12_hitl/: README.md  hitl_email_service.py
examples/14_dynamic_tool_headers/: README.md  service_app.py
(+5 files in other folders)
