[project]
name = "deepagents-cookbook"
version = "0.1.0"
description = "DeepAgents 中文 cookbook，按 agent 能力组织可运行示例。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents==0.5.3",
    "langchain-mcp-adapters==0.1.14",
    "langchain-openai==1.1.9",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
