[project]
name = "deepagents-examples"
version = "0.1.0"
description = "Agent 应用中文示例，使用 DeepAgents 演示。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-sandbox==0.0.30",
    "deepagents==0.5.3",
    "httpx==0.28.1",
    "langchain-mcp-adapters==0.1.14",
    "langchain-openai==1.1.9",
    "langgraph-checkpoint-postgres==3.1.0",
    "psycopg[binary]==3.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
